# mpk-poznan-dashboard

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  pyproject.toml  scheme.sql
assets/: dashExtensions_default.js  style.css
callbacks/: search.py  stops.py  theme.py  vehicles.py
components/: routes_layer.py  stops_layer.py  vehicles_layer.py
data/: db.py  routes.py  stops.geojson  stops.py  timetable.py
data/realtime/: client.py  vehicle_info.py  vehicles.py
layout/: main.py
