[project]
name = "mpk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.0.0",
    "dash-leaflet>=1.1.3",
    "folium>=0.20.0",
    "gtfs-kit>=12.0.3",
    "gtfs-realtime-bindings>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
